--- a/style.css
+++ b/style.css
@@ -116,3 +116,24 @@ h3 {
     display: flex;
     justify-content: center;
 }
+
+.footer-container {
+    background-color: #e5e7eb;
+}
+
+.footer-text,
+.footer-author {
+    display: flex;
+    justify-content: center;
+    font-size: 36px;
+    font-style: italic;
+    color: #1f2937;
+    padding: 8% 0 0 0;
+}
+
+.footer-author {
+    display: flex;
+    justify-content: flex-end;
+    font-style: bold;
+    padding: 0 27% 8% 0;
+}
